[package]
name = "phtree"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
description = "Implementation of PH-tree https://tzaeschke.github.io/phtree-site/"
readme = "README.md"
documentation = "https://docs.rs/phtree/"
repository = "https://github.com/naomijub/phtree"
keywords = ["PHtree", "Octree", "ph-tree"]
license = "MIT"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
