[package]
name = "cribit-tree"
version = "0.1.0"
description = "Implementation of Cribit-tree"
readme = "README.md"
documentation = "https://docs.rs/cribit-tree/"
repository = "https://github.com/naomijub/phtree/cribit-tree"
keywords = ["cribit", "tree", "cribit-tree"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Possible crates:
bitflags = "1.3.2"
bincode = "1.3.3"
serde_bytes = "0.11.9"
zstd = "0.12.3"
rayon = "*"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ahash = { version = "0.8.2", features = ["serde"] }
ordered-float = "3.4.0"
ron = "0.8"
morton-encoding = "2.0.1"
ilattice = "0.2.0"
nalgebra = "0.32.2"